# foobarquix

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  Vagrantfile  debug_server.py  openapi.json  pyproject.toml  wsgi.py
app/: asgi.py  main.py
app/api/routes/: api.py  match.py  ready.py
app/models/: match.py  ready.py
argocd/: 3.argocd.cm.yaml  3.argocd.ingress.yaml  3.argocd.repository.secret.yaml  4.argocd.foobarqix.application.yaml
argocd/applications/: foobarqix.application.yaml
argocd/config/: argocd.cm.yaml  argocd.repository.secret.yaml
argocd/server/: argocd.ingress.yaml
charts/foobarqix/: Chart.yaml  values.yaml
charts/foobarqix/templates/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
charts/foobarquix/: Chart.yaml  README.md  values.yaml
charts/foobarquix/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm-chart/: values.yaml
helm-chart/templates/: _helpers.tpl  deployment.yaml
images/base-env/: Dockerfile
images/runtime/: .gitignore  Dockerfile
infra/: Vagrantfile
infra/argocd/: 0.argocd.cm.yaml  0.argocd.repository.secret.yaml  1.foobarquix.application.yaml
minikube/: README.md  ingress-nginx-controller.patch.json
postman/: FooBarQix.postman_collection.json  openapi.json
src/: pyproject.toml  setup.cfg  test_main.py  wsgi.py
src/app/: asgi.py
src/app/api/routes/: api.py  match.py  ready.py
src/app/core/: config.py
src/app/models/: match.py
src/scripts/: format  lint
src/tests/: test_main.py
src/tests/data/: test_data.json
