[tool.poetry]
name = "foobarqix"
version = "0.1.0"
description = ""
authors = ["r2r-dev <dev@r2r.sh>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = "^0.13.2"
gunicorn = "^20.0.4"
uvloop = "^0.14.0"
httptools = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
#nuitka = "0.6.8.4"
isort = "^5.6.4"
flake8 = "^3.8.4"
autoflake = "^1.4"
black = "^20.8b1"
wemake-python-styleguide = { git = "https://github.com/wemake-services/wemake-python-styleguide", rev = "a787ee1" }
flake8-fixme = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
